Removed bottom margin from demo - appears to have lessened the chrome issue with demo box border being partially cut off after expanding.

--- a/css/example.css
+++ b/css/example.css
@@ -3,8 +3,8 @@ body {
 }
 
 .demo {
-    margin: 0 0 20px 0;
-    border: 2px solid #efefef;
+    margin: 0;
+    border: 1px solid #efefef;
     padding: 20px;
 }
 
